feat: add fullscreen btn & btn for change background

--- a/drum-kit/sass/style.scss
+++ b/drum-kit/sass/style.scss
@@ -2,11 +2,30 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: url('../assets/background/concert1.jpg') bottom center;
-    background-size: cover;
+    background: url('../assets/background/concert1.jpg') bottom center / cover;
     height: 100%;
     font-family: sans-serif;
     user-select: none;  
+    transition: 0.5s all;
+}
+
+.fullscreen {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    background-color: sandybrown;
+    border-radius: 10%;
+    cursor: pointer;
+}
+
+.fullscreen_icon {
+    width: 30px;
+    height: 30px;
 }
 
 .notes {
@@ -48,4 +67,16 @@ html {
         border-color: sandybrown;
         box-shadow: 0 0 20px sandybrown;
     }
+}
+
+.change_background {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: sandybrown;
+    cursor: pointer;
+    border: none;
 }
